Fixed overflow bug with code snippets

--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -78,6 +78,7 @@ $success: #32bd5d;
 body {
 	font-family:'Lato', sans-serif;
 	color:$type;
+	overflow-x:hidden;
 }
 
 .header--lrg {
@@ -1770,6 +1771,7 @@ form {
 		padding:12px;
 		margin:30px 0;
 		color:#fff;
+		overflow:hidden;
 	}
 	code {
 		font-size:90%;
